[package]
name = "kong-security-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.15"
mongodb = "3.3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10"
futures-util = "0.3.31"
