[package]
name = "kong-security-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment & Configuration
dotenv = "0.15"

# Security & Authentication
jsonwebtoken = "9"
bcrypt = "0.15"
validator = { version = "0.18", features = ["derive"] }
regex = "1"
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Database
mongodb = "3.3.0"
futures-util = "0.3.31"

# Cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"

# Async Runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

# Logging
env_logger = "0.10"
log = "0.4"

# API Documentation
utoipa = { version = "4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }

[dev-dependencies]
# Testing & Load Testing
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
colored = "2.1"
futures = "0.3"
chrono = "0.4"
# In-memory database for tests (equivalent to H2 for Java)
sled = "0.34"
bincode = "1.3"  # For serialization with Sled

# [[bench]]
# name = "login_benchmark"
# harness = false
